# zeditor

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dev-check.sh  dev-run.sh  dev.sh
src/: config_screen.rs  db.rs  env.rs  home_screen.rs  lib.rs  main.rs  msg.rs  perm_skip.rs  quit.rs  replace.rs  screens.rs  search.rs  skip.rs  theme.toml
tests/: search.txt  search_test.rs
