[package]
name = "zeditor"
version = "0.1.4-d"
edition = "2021"

[dependencies]
blake3 = "1.3.1"
cursive = { git = "https://github.com/gyscos/cursive", features = ["toml"] }
futures = "0.3.21"
glob = "0.3.0"
regex = "1.5.6"
rusqlite = { version = "0.27.0", features = ["bundled","blob"] }
tokio = { version = "1.19.2", features = ["full"] }
